--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "10.4.15",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
